KULRICE-1019 - removed the surefire plugin from the KEW POM and updated the one in the parent have -Xmx and permgen memory settings of 1024 and 512 respectively