@@ -30,7 +30,7 @@
 			<build>
 				<testResources>
 					<testResource>
-            <filtering>true</filtering>
+            			<filtering>true</filtering>
 						<directory>${basedir}/src/test/resources</directory>
 						<includes>
 							<include>META-INF/${project.name}-test-config.xml</include>
@@ -62,6 +62,7 @@
 							</includes>
 							<forkMode>once</forkMode>
 							<reportFormat>plain</reportFormat>
+					        <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
 						</configuration>
 					</plugin>
 					<plugin>
@@ -85,32 +86,32 @@
 								</goals>
 							</execution>
 						</executions>
-            <configuration>
-              <jdk>1.5</jdk>
-              <licenseLocation>kns/src/test/config/clover.license</licenseLocation>
-            </configuration>
+			            <configuration>
+			              <jdk>1.5</jdk>
+			              <licenseLocation>kns/src/test/config/clover.license</licenseLocation>
+			            </configuration>
 					</plugin>
-          <plugin>
-            <artifactId>maven-deploy-plugin</artifactId>
-            <version>2.3</version>
-          </plugin>
-          <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-source-plugin</artifactId>
-      <version>2.0.2</version>
-            <configuration>
-              <outputDirectory>/tmp</outputDirectory>
-              <finalName>rice-source</finalName>
-              <attach>false</attach>
-            </configuration>
-          </plugin>
-          <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-javadoc-plugin</artifactId>
-      <version>2.2</version>
-          </plugin>
-		</plugins>
-   	</build>
+		            <plugin>
+		            	<artifactId>maven-deploy-plugin</artifactId>
+		            	<version>2.3</version>
+		          	</plugin>
+		          <plugin>
+				      <groupId>org.apache.maven.plugins</groupId>
+				      <artifactId>maven-source-plugin</artifactId>
+				      <version>2.0.2</version>
+				            <configuration>
+				              <outputDirectory>/tmp</outputDirectory>
+				              <finalName>rice-source</finalName>
+				              <attach>false</attach>
+				            </configuration>
+				          </plugin>
+				          <plugin>
+				      <groupId>org.apache.maven.plugins</groupId>
+				      <artifactId>maven-javadoc-plugin</artifactId>
+				      <version>2.2</version>
+          		  </plugin>
+				</plugins>
+			</build>
 </profile>
 <profile>
 		<id>install-kns-dev</id>
